# petit_program

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  component.h  component_sprite.h  constants.h  debug.h  entity.h  entity_counter.h  entity_enemy.h  entity_player.h  entity_point.h  entity_text.h  game.h  graphics.h  levels.h  main.cpp  resources.h  service_input.h  service_locator.h  sprite.h  sprite_animation.h  sprite_resource.h
.github/workflows/: cmake.yml
